--- a/public/pages/room/index.html
+++ b/public/pages/room/index.html
@@ -12,6 +12,7 @@
     <script defer src="./deps/peerjs.min.js"></script>
     <script src="./deps/socket.io.min.js" defer></script>
 
+    <script src="src/util/peer.js" defer></script>
     <script src="src/util/socket.js" defer></script>
     <script src="src/util/util.js" defer></script>
     <script src="src/util/media.js"></script>
